[package]
name = "llguidance_bg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
llguidance = { git = "https://github.com/guidance-ai/llguidance", tag = "v0.6.4", default-features = false, features = ["jsonschema_validation", "lark"] }
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"

[build-dependencies]
cbindgen = "0.27.0"

[lib]
crate-type = ["staticlib"]
# crate-type = ["cdylib"]

# [patch.'https://github.com/guidance-ai/llguidance']
# llguidance = { path = "../llguidance/parser" }

[workspace]
