[package]
name = "llguidance_bg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
llguidance = { version = "1.2.0", default-features = false, features = ["lark", "referencing", "ahash"] }
rayon = "1.10.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"

[build-dependencies]
cbindgen = "0.28.0"

[lib]
crate-type = ["staticlib"]
# crate-type = ["cdylib"]

# [patch.crates-io]
# llguidance = { path = "../llguidance/parser" }

[profile.release]
debug = 1

[workspace]
